fixing bug for background on mobile version

--- a/src/main/webapp/assets/landingpage/css/landingpage.css
+++ b/src/main/webapp/assets/landingpage/css/landingpage.css
@@ -20,8 +20,17 @@ body {
 iframe span#u_0_3 {
   display: none; }
 
+.bg-block {
+  width: 90%;
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: -50px;
+  margin: auto; }
+
 .bg-landingpage {
-  background: #2e272a url(../images/bg.png) fixed no-repeat;
+  background: #2e272a url(../images/bg.png) center top repeat;
   width: 100%; }
 
 .landingpage-main {
